@@ -164,147 +164,7 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="QScrollArea" name="scrollArea_block">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>300</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="verticalScrollBarPolicy">
-        <enum>Qt::ScrollBarAsNeeded</enum>
-       </property>
-       <property name="horizontalScrollBarPolicy">
-        <enum>Qt::ScrollBarAsNeeded</enum>
-       </property>
-       <property name="sizeAdjustPolicy">
-        <enum>QAbstractScrollArea::AdjustToContents</enum>
-       </property>
-       <property name="widgetResizable">
-        <bool>true</bool>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-       </property>
-       <widget class="QWidget" name="scrollAreaWidgetContents">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>298</width>
-          <height>512</height>
-         </rect>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_3">
-         <property name="spacing">
-          <number>2</number>
-         </property>
-         <item row="0" column="2" alignment="Qt::AlignLeft|Qt::AlignTop">
-          <widget class="QToolButton" name="toolButton_new_filter2">
-           <property name="toolTip">
-            <string>Add a new filter</string>
-           </property>
-           <property name="text">
-            <string>+</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="3">
-          <widget class="PlotMatrix" name="plot_matrix" native="true">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>67</width>
-             <height>99</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>156</height>
-            </size>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="4" alignment="Qt::AlignLeft|Qt::AlignTop">
-          <widget class="QToolButton" name="toolButton_new_plot2">
-           <property name="toolTip">
-            <string>Add a new plot</string>
-           </property>
-           <property name="text">
-            <string>+</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="5">
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>0</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="0" rowspan="2" colspan="2">
-          <widget class="DataMatrix" name="data_matrix" native="true">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>67</width>
-             <height>99</height>
-            </size>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <spacer name="verticalSpacer">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>0</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="2" column="0">
-          <widget class="QToolButton" name="toolButton_load_dataset2">
-           <property name="toolTip">
-            <string>Import a dataset</string>
-           </property>
-           <property name="text">
-            <string>+</string>
-           </property>
-           <property name="autoRaise">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </widget>
+      <widget class="BlockMatrix" name="block_matrix" native="true"/>
       <widget class="QMdiArea" name="mdiArea">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -549,15 +409,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>DataMatrix</class>
+   <class>BlockMatrix</class>
    <extends>QWidget</extends>
-   <header>shapeout2.gui.matrix.data_matrix</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>PlotMatrix</class>
-   <extends>QWidget</extends>
-   <header>shapeout2.gui.matrix.plot_matrix</header>
+   <header>shapeout2.gui.matrix.block_matrix</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
@@ -612,38 +466,6 @@
    </hints>
   </connection>
   <connection>
-   <sender>toolButton_load_dataset2</sender>
-   <signal>clicked()</signal>
-   <receiver>actionLoadDataset</receiver>
-   <slot>trigger()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>110</x>
-     <y>386</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>toolButton_new_filter2</sender>
-   <signal>clicked()</signal>
-   <receiver>actionNewFilter</receiver>
-   <slot>trigger()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>183</x>
-     <y>262</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>toolButton_new_filter</sender>
    <signal>clicked()</signal>
    <receiver>actionNewFilter</receiver>
@@ -668,22 +490,6 @@
     <hint type="sourcelabel">
      <x>249</x>
      <y>43</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>toolButton_new_plot2</sender>
-   <signal>clicked()</signal>
-   <receiver>actionNewPlot</receiver>
-   <slot>trigger()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>285</x>
-     <y>262</y>
     </hint>
     <hint type="destinationlabel">
      <x>-1</x>
